- Improved `EventProcessor` logging - Introduced `EventStoreSubscriptionObserver` which is used for tracking `EventStoreSubscription` statistics    - Added `MeasurementEventStoreSubscriptionObserver` as the default `EventStoreSubscriptionObserver` implementation    - Added `EventStoreSubscriptionObserver` to `DefaultEventStoreSubscriptionManager` - Added `isExclusive`, `isAsynchronous` and `isInTransaction` methods to `EventStoreSubscription` - Introduced `RecordExecutionTimeEventStoreInterceptor` that records execution time for event store operations using the `MeasurementTaker` API - Added more `OptimisticAppendToStreamException` message explanation og improved logging formatting - Improved `SeparateTablePerAggregateTypePersistenceStrategy`'s message and logging in case of `OptimisticAppendToStreamException` or `AppendToStreamException` during `persist` - Improved `PostgresqlEventStore`:   - Added support for `resolveBatchSizeForThisQuery` corner case when no events have been persisted for an aggregate type.   - Improved `PollEventStoreTask` poll interval logic if events were published vs when no events were published